--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ social:
     - https://github.com/itbraustralia
 
 service_worker: true
+google_tag_manager: 'UA-119467002-1'
 
 # Build settings
 markdown: kramdown
