--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: IT.BR Australia # your site title
 author: IT.BR Australia
-email: your-email@domain.com # email for form submission, you also have to change it in _js/scripts.js
+email: admin@itbr.com.au # email for form submission, you also have to change it in _js/scripts.js
 description: > # this means to ignore newlines until "baseurl:"
   Site da comunidade de brasileiros que trabalham com IT na Australia
 baseurl: "/" # the subpath of your site, e.g. /blog
