--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 services:
   site:
     command: bash -c "gem install bundler && bundle update && jekyll serve --watch --incremental"
-    image: jekyll/jekyll:latest
+    image: jekyll/jekyll:3.8.1
     ports:
-        - 4000:4000
+      - 4000:4000
     volumes:
-        - $PWD:/srv/jekyll
+      - $PWD:/srv/jekyll
